<resources>
    <string name="app_name">Alpha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refername">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_</string>
    <string name="add_50_rupees_to_get_upgrade">Add 50 rupees to get upgrade</string>
    <string name="pay">Pay</string>
    <string name="user_name">User Name</string>
    <string name="email_limits">abcdefghijklmnopqrstuvwxyz.@0123456789_</string>

    <string name="wallet_balance">Wallet Balance</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //Google Login
    <string name="web_client_id">xxxxxxxx..place your web client id here</string>
    <string name="HIDE" />
    <string name="SAVE" />
    <string name="dashboard">Dashboard</string>
    <string name="beginner">Beginner</string>
    <string name="end_session">Are you sure you want to end the session?</string>
    <string name="shankar">SHANKAR</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="okay">OKAY</string>
    <string name="functions">Functions</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="finish">FINISH</string>
    <string name="sign_up">Sign Up</string>
    <string name="just_few_more_steps_and_you_re_finished">Just few more steps and you\'re finished!</string>
    <string name="we_hate_paperwork_too">We hate Paperwork too!</string>
    <string name="enter_email_and_password">Enter email and password.</string>
    <string name="password">Password</string>
    <string name="new_user">New user?</string>
    <string name="forgot_password">Forgot Password !</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome</string>
    <string name="email">Email</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="reset">RESET</string>
    <string name="cancel">CANCEL</string>
    <string name="pin_created_successfully">PIN Created Successfully</string>
    <string name="logout">LOGOUT</string>
    <string name="next">Next</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="sign_up_C">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="login_C">LOGIN</string>
    <string name="you_are_now_eligible_to_upgrade_to_bronze">You are now eligible to upgrade to bronze</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>

    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>


    <string name="onboard_text_less_investment">"Invest
as low as ₹50 "</string>


    <string name="onboard_text_minimum">"Refer Two people"</string>

    <string name="credit_text_work">"Enter
Refer Code"</string>

    <string name="credit_text_less_levels">"Completely Legal"</string>

    <string name="credit_initial_offer_title_instant_loan">Personal Loans up to</string>
    <string name="title_activity_bottom_default_navigation">BottomDefaultNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="connecting_server">Connecting Server</string>

</resources>
