<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".Registration.Signup_Activity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="By continuing, I accept the following Terms and Conditions"
        android:visibility="gone"
        android:textSize="11sp"
        android:gravity="center">

    </TextView>

    <ImageButton
        android:id="@+id/bt_close"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:tint="@color/black"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            tools:ignore="UselessParent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/sign_up"
                android:fontFamily="@font/ubuntu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/indigo_800"
                android:textStyle="bold" />

            <View
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:background="@color/indigo_800" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="10dp"
                android:visibility="gone"
                android:text="@string/just_few_more_steps_and_you_re_finished"
                android:textColor="@color/grey_800"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:text="@string/we_hate_paperwork_too"
                android:textColor="@color/grey_800"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/ubuntu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_800"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <requestFocus />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:layout_marginTop="20dp"
                android:text="Full Name"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_800"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:layout_marginTop="-5dp"
                    android:hint=""
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/password"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_800"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                app:passwordToggleDrawable="@drawable/password_view"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/termsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp"

                >

                <TextView
                    android:id="@+id/agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="By continuing, I accept the following"
                    android:textColor="@color/black"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="center" />


                <TextView
                    android:id="@+id/txtAgreeTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="Terms &amp; conditions"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/blue_700"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


            </LinearLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded_blue_gray"
                android:text="R E G I S T E R"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="480dp"
        android:theme="@style/ProgressBar.colorPrimary"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="L O G I N"
            android:textColor="@color/white"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/applynowLayout"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/indigo_800"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upgradeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Register now"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:textColor="@color/white">

                </TextView>

                <ProgressBar
                    android:id="@+id/joinProgressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:theme="@style/ProgressBar.White"
                    android:visibility="gone" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>